--- a/part2/browser-tenmplate.html
+++ b/part2/browser-tenmplate.html
@@ -12,6 +12,7 @@
         xx{{age}}
     </script>
     <script>
+        // template('script id标签', data)
         var exa = template('tem', {
             name: 'ywc',
             age:23
