--- a/test/index.html
+++ b/test/index.html
@@ -131,18 +131,19 @@
 // console.log(obj.constructor==Object); //true
 
 // 方法一 防抖
-var timer = null;
-var dayin = function dayin() {
-    alert('你滚动了滑动条！');
-}
-window.onscroll = () => {
-    if (timer) {
-        clearTimeout(timer); // 当前正在一个计时过程中，并且又触发了相同事件。所以要取消当前的计时，重新开始计时
-        timer = setTimeout(dayin, 2000) 
-    } else {
-        timer = setTimeout(dayin, 2000)  // 当前并没有在计时，那么就开始一个计时
-    }
-}
+// 所谓防抖，就是把触发非常频繁的事件合并成一次去执行。即在指定时间内只执行一次回调函数，如果在指定的时间内又触发了该事件，则回调函数的执行时间会基于此刻重新开始计算。
+// var timer = null;
+// var dayin = function dayin() {
+//     alert('你滚动了滑动条！');
+// }
+// window.onscroll = () => {
+//     if (timer) {
+//         clearTimeout(timer); // 当前正在一个计时过程中，并且又触发了相同事件。所以要取消当前的计时，重新开始计时
+//         timer = setTimeout(dayin, 2000) 
+//     } else {
+//         timer = setTimeout(dayin, 2000)  // 当前并没有在计时，那么就开始一个计时
+//     }
+// }
 // 方法二 防抖
 // var timer = null;
 // var dayin = function dayin() {
@@ -162,5 +163,19 @@ window.onscroll = () => {
 //     }
 //     return xx(dayin, 2000)
 // }
+
+// 节流
+// 所谓节流，是指频繁触发事件时，只会在指定的时间段内执行事件回调，即触发事件间隔大于等于指定的时间才会执行回调函数。
+var timer = null;
+var dayin = function dayin() {
+    alert('你滚动了滑动条！');
+}
+window.onscroll = () => {
+    if (timer) {
+        timer = setTimeout(dayin, 2000) 
+    } else {
+        timer = setTimeout(dayin, 2000)
+    }
+}
 </script>
 </html>
