--- a/test/apply.html
+++ b/test/apply.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .box{
+            display: flex;
+            flex-flow: wrap;
+            /* align-content: center; */
+            align-items: center;
+            justify-content: center;
+            height: 400px;
+            border: 1px solid;
+        }
+        .item{
+            width: 900px;
+            border: 1px solid;
+            height: 50px;
+        }
+            
+    </style>
 </head>
 <body>
-    
+    <div class="box">
+        <div class="item">A</div>
+        <div class="item">B</div>
+    </div>
 </body>
 <script>
     // var name = 'ywc';
@@ -33,7 +53,36 @@
         console.log(a);
     }
     ff(1, 3, 4, 77);
-
-
+ 
+ let a1 = 'aaabbbcccbbbffbbb';
+ let b1 = 'bbb';
+ let c1 = 'ddd';
+  
+ function find(a,b,c){
+     while(true){//直到a中没有b
+         let num = a.indexOf(b);//确定a中b的开始下标
+         console.log(num)
+         if(num != -1){//查找到
+             let Aarr = a.split('');//转换成数组
+             a = '';
+             let count = 0;
+             Aarr.map((item,index)=>{
+                 // console.log(item,index);
+                 if(index>=num && index<num+b.length){
+                     if(count == 0){
+                         a += c;
+                     }
+                     count ++;
+                 }else{
+                     a += Aarr[index];
+                 }
+             })
+         }else{
+             return a;
+         }
+     }
+ }
+ let f = find(a1,b1,c1);
+ console.log(f);
 </script>
 </html>
