--- a/test/index.html
+++ b/test/index.html
@@ -166,16 +166,19 @@
 
 // 节流
 // 所谓节流，是指频繁触发事件时，只会在指定的时间段内执行事件回调，即触发事件间隔大于等于指定的时间才会执行回调函数。
-var timer = null;
-var dayin = function dayin() {
-    alert('你滚动了滑动条！');
-}
-window.onscroll = () => {
-    if (timer) {
-        timer = setTimeout(dayin, 2000) 
-    } else {
-        timer = setTimeout(dayin, 2000)
-    }
-}
+// var timer = null;
+// var dayin = function dayin() {
+//     alert('你滚动了滑动条！');
+// }
+// window.onscroll = () => {
+//     if (timer) {
+//         timer = setTimeout(dayin, 2000) 
+//     } else {
+//         timer = setTimeout(dayin, 2000)
+//     }
+// }
+const g = 1;console.log(g)
+
 </script>
+
 </html>
